--- a/src/schooltool/gradebook/locales/lt.po
+++ b/src/schooltool/gradebook/locales/lt.po
@@ -7,18 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: Mon Oct 12 20:16:08 2009\n"
-"PO-Revision-Date: 2009-10-12 20:36+0300\n"
+"POT-Creation-Date: 2009-10-12 20:16+0000\n"
+"PO-Revision-Date: 2009-10-12 18:50+0000\n"
 "Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
 "Language-Team: Lithuanian\n"
-"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
-"100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Virtaal 0.4.0\n"
-"X-Launchpad-Export-Date: 2009-05-18 17:08+0000\n"
+"X-Launchpad-Export-Date: 2009-10-13 07:03+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
+"Language: lt\n"
 "X-Rosetta-Version: 0.1\n"
 
 #: /src/schooltool/gradebook/activity.py:203
@@ -342,10 +340,10 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:68
 msgid ""
-"For example, if you have three worksheets in a section, \"A,\" \"B,\" and \"C,\" "
-"and click \"Create Summary Worksheets,\" an additional sheet, entitled "
-"\"Summary\" will be created, which includes the average scores from \"A,\" \"B\" "
-"and \"C\" in the first three columns."
+"For example, if you have three worksheets in a section, \"A,\" \"B,\" and "
+"\"C,\" and click \"Create Summary Worksheets,\" an additional sheet, "
+"entitled \"Summary\" will be created, which includes the average scores from "
+"\"A,\" \"B\" and \"C\" in the first three columns."
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:73
@@ -353,7 +351,6 @@ msgid "Overwrite existing worksheets titled \"Summary\"."
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:78
-#, fuzzy
 msgid "Create Summary Worksheets"
 msgstr ""
 
@@ -681,16 +678,15 @@ msgstr ""
 msgid ""
 "For example, say the term is \"Fall 2011,\" and you have deployed a report "
 "sheet entitled \"Semester Grades,\" which includes an activity \"First "
-"Quarter,\" using a grading scale where a \"3\" or higher is passing. To create "
-"a report of students failing the first quarter grade, you would select the "
-"report activity \"Fall 2011 - Semester Grades - First Quarter\" and choose \"3\" "
-"as the minimum passing grade. And click \"Download.\""
+"Quarter,\" using a grading scale where a \"3\" or higher is passing. To "
+"create a report of students failing the first quarter grade, you would "
+"select the report activity \"Fall 2011 - Semester Grades - First Quarter\" "
+"and choose \"3\" as the minimum passing grade. And click \"Download.\""
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/request_failing_report.pt:36
-#, fuzzy
 msgid "Report Activity"
-msgstr "Nauja veikla ataskaitoje"
+msgstr ""
 
 #: /src/schooltool/gradebook/browser/request_failing_report.pt:54
 msgid "Minimum Passing Score"
@@ -701,9 +697,8 @@ msgid "Absences By Day"
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/request_reports.py:109
-#, fuzzy
 msgid "Section Reports"
-msgstr "Kursas"
+msgstr ""
 
 #: /src/schooltool/gradebook/browser/request_reports.py:116
 msgid "Download Absences by Section Report"
@@ -714,9 +709,8 @@ msgid "Request Failing Report"
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/request_reports.py:140
-#, fuzzy
 msgid "Choose a report activity"
-msgstr "Nauja veikla ataskaitoje"
+msgstr ""
 
 #: /src/schooltool/gradebook/browser/request_reports.py:171
 msgid "Choose a minimum passing score"
@@ -797,8 +791,8 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/weight_categories.pt:22
 msgid ""
 "For example, to weight exams as 60% of the grade, homework as 20% and "
-"quizzes as 20%, enter \"60\" next to \"Exam,\" 20\" next to \"Homework\" and \"20\" "
-"next to \"quiz.\""
+"quizzes as 20%, enter \"60\" next to \"Exam,\" 20\" next to \"Homework\" and "
+"\"20\" next to \"quiz.\""
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/weight_categories.pt:5
@@ -1038,9 +1032,8 @@ msgid "A detailed description of the external activity."
 msgstr "Smulkus išorinės veiklos aprašymas."
 
 #: /src/schooltool/gradebook/interfaces.py:412
-#, fuzzy
 msgid "Linked Column Activity Source"
-msgstr "Išorinės veiklos šaltinis"
+msgstr ""
 
 #: /src/schooltool/gradebook/interfaces.py:413
 msgid "A text string that specifies the source of the column"
