--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,15 @@
 CHANGES
 ~~~~~~~
 
+0.5.1dev
+==================
+
+Bugs
+----
+
+* Fix term selection in gradebook overview and student's views.
+
+
 0.5.0 (2009-11-04)
 ==================
 
