--- a/src/schooltool/gradebook/locales/de.po
+++ b/src/schooltool/gradebook/locales/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-10-27 21:13+0000\n"
-"PO-Revision-Date: 2009-11-09 16:50+0000\n"
-"Last-Translator: BBO <Unknown>\n"
+"PO-Revision-Date: 2009-11-12 00:37+0000\n"
+"Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-11-10 11:42+0000\n"
+"X-Launchpad-Export-Date: 2009-11-13 11:35+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Rosetta-Version: 0.1\n"
 "X-Poedit-Bookmarks: 326,-1,-1,-1,-1,-1,-1,-1,-1,-1\n"
