--- a/src/schooltool/gradebook/locales/it.po
+++ b/src/schooltool/gradebook/locales/it.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: Giancarlo Gaifas <lallo@artiemestieri.tn.it>\n"
 "POT-Creation-Date: 2009-10-27 21:13+0000\n"
-"PO-Revision-Date: 2009-10-30 16:49+0000\n"
+"PO-Revision-Date: 2009-11-24 19:35+0000\n"
 "Last-Translator: Davide Notaristefano <davide@notaristefano.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-10-31 08:44+0000\n"
+"X-Launchpad-Export-Date: 2009-11-25 04:54+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Rosetta-Version: 0.1\n"
 
@@ -22,7 +22,7 @@ msgstr ""
 #: /src/schooltool/gradebook/interfaces.py:203
 #: /src/schooltool/gradebook/browser/worksheet_overview.pt:8
 msgid "Activities"
-msgstr ""
+msgstr "Attività"
 
 #: /src/schooltool/gradebook/activity.py:53
 msgid "Sheet1"
@@ -75,15 +75,15 @@ msgstr "Applicare"
 #. Default: ""
 #: /src/schooltool/gradebook/browser/activity.py:323
 msgid "$value is not a valid weight."
-msgstr ""
+msgstr "$value non è un peso valido."
 
 #: /src/schooltool/gradebook/browser/activity.py:332
 msgid "Category weights must add up to 100."
-msgstr ""
+msgstr "I pesi della categoria devono aggiungersi fino a 100."
 
 #: /src/schooltool/gradebook/browser/activity.py:378
 msgid "The external activity couldn't be found"
-msgstr ""
+msgstr "L'attività esterna non può essere trovata"
 
 #: /src/schooltool/gradebook/browser/activity.py:522
 #: /src/schooltool/gradebook/browser/activity.py:590
@@ -100,11 +100,11 @@ msgstr "Modificare Colonna Collegata"
 
 #: /src/schooltool/gradebook/browser/activity.py:73
 msgid "External Activity"
-msgstr ""
+msgstr "Attività Esterna"
 
 #: /src/schooltool/gradebook/browser/activity.py:74
 msgid "The external activity"
-msgstr ""
+msgstr "L'attività esterna"
 
 #: /src/schooltool/gradebook/browser/categories.pt:19
 msgid ""
@@ -155,15 +155,15 @@ msgstr "tasto-cambia"
 
 #: /src/schooltool/gradebook/browser/category.py:43
 msgid "Categories"
-msgstr ""
+msgstr "Categorie"
 
 #: /src/schooltool/gradebook/browser/category.py:49
 msgid "New Category"
-msgstr ""
+msgstr "Nuova Categoria"
 
 #: /src/schooltool/gradebook/browser/category.py:52
 msgid "Default Category"
-msgstr ""
+msgstr "Categoria predefinita"
 
 #: /src/schooltool/gradebook/browser/category.py:75
 msgid "Categories successfully deleted."
@@ -230,7 +230,7 @@ msgstr "Nuova Attività Esterna"
 #: /src/schooltool/gradebook/browser/configure.zcml:325
 #: /src/schooltool/gradebook/browser/configure.zcml:369
 msgid "New Linked Column"
-msgstr ""
+msgstr "Nuova Colonna Collegata"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:376
 msgid "Manage Activities"
@@ -238,7 +238,7 @@ msgstr "Gestisci Attività"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:390
 msgid "Preferences"
-msgstr ""
+msgstr "Preferenze"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:407
 msgid "Update Grades"
@@ -278,22 +278,24 @@ msgstr ""
 #. Default: ""
 #: /src/schooltool/gradebook/browser/gradebook.py:1013
 msgid "Enter grades for ${fullname}"
-msgstr ""
+msgstr "Inserire i voti per ${fullname}"
 
 #. Default: ""
 #: /src/schooltool/gradebook/browser/gradebook.py:1036
 msgid "$worksheet for $student in $section"
-msgstr ""
+msgstr "$foglio di lavoro per lo $studente nella $sezione"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:203
 msgid ""
 "You have some changes that have not been saved.  Click OK to save now or "
 "CANCEL to continue without saving."
 msgstr ""
+"Ci sono delle modifiche che non sono state salvate. Premere OK per salvare "
+"adesso o CANCEL per continuare senza salvare."
 
 #: /src/schooltool/gradebook/browser/gradebook.py:396
 msgid "Invalid scores (highlighted in red) were not saved."
-msgstr ""
+msgstr "I punteggi invalidi (evidenziati in rosso) non sono stati salvati"
 
 #. Default: ""
 #: /src/schooltool/gradebook/browser/gradebook.py:640
@@ -307,7 +309,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/gradebook.py:71
 msgid "Ave."
-msgstr ""
+msgstr "Med."
 
 #: /src/schooltool/gradebook/browser/gradebook.py:71
 #: /src/schooltool/gradebook/browser/pdf_views.py:645
@@ -316,7 +318,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/gradebook.py:875
 msgid "-- No score system --"
-msgstr ""
+msgstr "-- Nessun sistema di punteggio --"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:926
 msgid "Previous"
@@ -328,22 +330,25 @@ msgstr "successivi"
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:18
 msgid "Column Type"
-msgstr ""
+msgstr "Tipo di Colonna"
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:19
 msgid "Hide?"
-msgstr ""
+msgstr "Nascondere?"
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:4
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:13
 msgid "Set Column Preferences"
-msgstr ""
+msgstr "Impostare Preferenze di Colonna"
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:65
 msgid ""
 "You can add a summary worksheet to each of your gradebooks that "
 "automatically includes a column for the average of all existing worksheets."
 msgstr ""
+"È possibile aggiungere un foglio di lavoro di sommario a ciascuno dei tuoi "
+"registri che automaticamente include una colonna per la media di tutti i "
+"fogli di lavoro esistenti."
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:68
 msgid ""
@@ -352,14 +357,18 @@ msgid ""
 "entitled \"Summary\" will be created, which includes the average scores from "
 "\"A,\" \"B\" and \"C\" in the first three columns."
 msgstr ""
+"Per esempio, se in una sezione si hanno tre fogli di lavoro, \"A\", \"B\", "
+"\"C\", e si clicca \"Creare Fogli di Lavoro di Sommario\", verrà creato un "
+"foglio addizionale, intitolato \"Sommario\", che include i punteggi medi di "
+"\"A\", \"B\" e \"C\" nelle prime tre colonne."
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:73
 msgid "Overwrite existing worksheets titled \"Summary\"."
-msgstr ""
+msgstr "Sovrascrivere i fogli di lavoro esistenti dal titolo \"Sommario\"."
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:78
 msgid "Create Summary Worksheets"
-msgstr ""
+msgstr "Creare Fogli di Lavoro di Sommario."
 
 #: /src/schooltool/gradebook/browser/gradebook_grade.pt:29
 msgid "Activity Name"
@@ -396,7 +405,7 @@ msgstr "Nome"
 #: /src/schooltool/gradebook/browser/gradebook_grade_activity.pt:47
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:158
 msgid "Apply a grade for all students:"
-msgstr ""
+msgstr "Dare un voto a tutti gli studenti"
 
 #: /src/schooltool/gradebook/browser/gradebook_grade_activity.pt:98
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:138
@@ -426,6 +435,9 @@ msgid ""
 "Javascript is <b>required</b> for the gradebook. Please enable Javascript or "
 "use a browser with Javascript."
 msgstr ""
+"Il tuo browser o non ha Javascript acceso, o non è supportato. Javascript è "
+"<b>richiesto</b> per il registro dei voti. Per favore abilita Javascript o "
+"usa un browser con Javascript."
 
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:77
 msgid "show only activities due in past"
@@ -437,15 +449,15 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/gradebook_startup.pt:13
 msgid "You do not teach or attend any classes."
-msgstr ""
+msgstr "Non frequenti o insegni in nessuna classe"
 
 #: /src/schooltool/gradebook/browser/gradebook_startup.pt:16
 msgid "Classes you teach"
-msgstr ""
+msgstr "Classi in cui insegni"
 
 #: /src/schooltool/gradebook/browser/gradebook_startup.pt:20
 msgid "Classes you attend"
-msgstr ""
+msgstr "Classi che frequenti"
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:118
 #: /src/schooltool/gradebook/browser/configure.zcml:311
@@ -455,7 +467,7 @@ msgstr "Nuova attività"
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:122
 msgid "Choose an activity to add"
-msgstr ""
+msgstr "Scegli un'attività da aggiungere"
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:13
 #: /src/schooltool/gradebook/browser/configure.zcml:549
@@ -468,7 +480,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:16
 msgid "Grid Columns"
-msgstr ""
+msgstr "Colonne di Griglia"
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:20
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:81
@@ -495,12 +507,12 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:61
 msgid "Choose a column to add"
-msgstr ""
+msgstr "Scegli una colonna da aggiungere"
 
 #: /src/schooltool/gradebook/browser/mygrades.pt:15
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:30
 msgid "Term:"
-msgstr ""
+msgstr "Quadrimestre:S"
 
 #: /src/schooltool/gradebook/browser/mygrades.pt:19
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:34
@@ -510,7 +522,7 @@ msgstr "Periodi"
 #: /src/schooltool/gradebook/browser/mygrades.pt:37
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:52
 msgid "Section:"
-msgstr ""
+msgstr "Sezione"
 
 #: /src/schooltool/gradebook/browser/mygrades.pt:41
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:56
@@ -527,14 +539,18 @@ msgid ""
 "no terms set up in your SchoolTool instance. Please have a user with "
 "administation access set up at least one term and try the operation again."
 msgstr ""
+"L'operazione che hai tentato non può essere completata perchè attualmente "
+"non ci sono quadrimestri impostati nella richiesta a SchoolTool. Per favore "
+"imposta un utente con accesso di amministratore impostato ad almeno un "
+"quadrimestre e prova a ripetere l'operazione."
 
 #: /src/schooltool/gradebook/browser/no_current_term.pt:5
 msgid "No Current Term"
-msgstr ""
+msgstr "Nessun Termine Corrente"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:194
 msgid "Report Card"
-msgstr ""
+msgstr "Scheda di valutazione"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:197
 #: /src/schooltool/gradebook/browser/pdf_views.py:303
@@ -546,19 +562,19 @@ msgstr "Materie"
 #: /src/schooltool/gradebook/browser/pdf_views.py:581
 #: /src/schooltool/gradebook/browser/pdf_views.py:636
 msgid "Student"
-msgstr ""
+msgstr "Studente"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:297
 msgid "Detailed Student Report"
-msgstr ""
+msgstr "Pagella Studente dettagliata"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:300
 msgid "Grade Detail"
-msgstr ""
+msgstr "Dettaglio del voto"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:306
 msgid "Attendance Detail"
-msgstr ""
+msgstr "Dettaglio della frequenza"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:309
 msgid "Dates"
@@ -567,7 +583,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/pdf_views.py:312
 #: /src/schooltool/gradebook/browser/gradebook_grade.pt:28
 msgid "Student Name"
-msgstr ""
+msgstr "Nome Studente"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:315
 msgid "User Id"
@@ -579,72 +595,74 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:419
 msgid "Report Sheet:"
-msgstr ""
+msgstr "Foglio Pagella:"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:425
 msgid "Activity:"
-msgstr ""
+msgstr "Attività:"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:431
 msgid "Passing Score:"
-msgstr ""
+msgstr "Punteggio di ammissione"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:437
 msgid "The following students are at risk of failing the following courses:"
 msgstr ""
+"I seguenti studenti sono a rischio di non superare le seguenti materie:"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:443
 #: /src/schooltool/gradebook/browser/pdf_views.py:623
 msgid "Course"
-msgstr ""
+msgstr "Materia"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:446
 msgid "Teacher(s)"
-msgstr ""
+msgstr "Insegnante(i)"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:449
 #: /src/schooltool/gradebook/browser/gradebook_grade.pt:12
 #: /src/schooltool/gradebook/browser/gradebook_grade.pt:32
 #: /src/schooltool/gradebook/browser/mygrades.pt:87
 msgid "Grade"
-msgstr ""
+msgstr "Voto"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:517
 msgid "Absences By Day Report"
-msgstr ""
+msgstr "Assenze dal Registro Giornaliero"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:578
 msgid "Period Number"
-msgstr ""
+msgstr "Numero del periodo"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:620
 msgid "Absences by Section Report"
-msgstr ""
+msgstr "Assenze dal Registro di Sezione"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:629
 msgid "Teacher"
-msgstr ""
+msgstr "Insegnante"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:639
 msgid "Absences"
-msgstr ""
+msgstr "Assenze"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:642
 msgid "Tardies"
-msgstr ""
+msgstr "Ritardi"
 
 #: /src/schooltool/gradebook/browser/report_card.py:119
 msgid "-- Use range below --"
-msgstr ""
+msgstr "-- Usare intervallo sottostante --"
 
 #: /src/schooltool/gradebook/browser/report_card.py:128
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:21
 msgid "Score System"
-msgstr ""
+msgstr "Sistema di punteggio"
 
 #: /src/schooltool/gradebook/browser/report_card.py:129
 msgid "Choose an existing score system or use range below"
 msgstr ""
+"Scegli un sistema di punteggio esistente oppure usa un intervallo sottostante"
 
 #: /src/schooltool/gradebook/browser/report_card.py:134
 msgid "Minimum"
@@ -652,27 +670,27 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/report_card.py:135
 msgid "Lowest integer score value possible"
-msgstr ""
+msgstr "Il più piccolo valore intero di punteggio possibile"
 
 #: /src/schooltool/gradebook/browser/report_card.py:140
 msgid "Maximum"
-msgstr ""
+msgstr "Massimo"
 
 #: /src/schooltool/gradebook/browser/report_card.py:141
 msgid "Highest integer score value possible"
-msgstr ""
+msgstr "Il più alto valore intero di punteggio possibile"
 
 #: /src/schooltool/gradebook/browser/report_card.py:55
 msgid "Absent"
-msgstr ""
+msgstr "Assente"
 
 #: /src/schooltool/gradebook/browser/report_card.py:56
 msgid "Tardy"
-msgstr ""
+msgstr "Ritardatario"
 
 #: /src/schooltool/gradebook/browser/report_card.py:57
 msgid "A"
-msgstr ""
+msgstr "A"
 
 #: /src/schooltool/gradebook/browser/report_card.py:58
 msgid "T"
