--- a/src/schooltool/gradebook/locales/nl.po
+++ b/src/schooltool/gradebook/locales/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-10-27 21:13+0000\n"
-"PO-Revision-Date: 2009-11-07 16:23+0000\n"
+"PO-Revision-Date: 2009-12-02 17:50+0000\n"
 "Last-Translator: rob <linuxned@gmail.com>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-11-08 04:42+0000\n"
+"X-Launchpad-Export-Date: 2009-12-03 04:49+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /src/schooltool/gradebook/activity.py:203
@@ -224,7 +224,7 @@ msgstr "Terug naar cijferlijst"
 #: /src/schooltool/gradebook/browser/configure.zcml:318
 #: /src/schooltool/gradebook/browser/configure.zcml:362
 msgid "New External Activity"
-msgstr "Nieuwe Externe Activiteit"
+msgstr "Nieuwe externe activiteit"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:325
 #: /src/schooltool/gradebook/browser/configure.zcml:369
@@ -590,7 +590,7 @@ msgstr "Gebruikers-ID"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:416
 msgid "Failures by Term Report"
-msgstr ""
+msgstr "Gezakten per perioderapport"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:419
 msgid "Report Sheet:"
@@ -743,7 +743,7 @@ msgstr "Absenties per sectierapport downloaden"
 
 #: /src/schooltool/gradebook/browser/request_reports.py:138
 msgid "Request Failures by Term Report"
-msgstr ""
+msgstr "Gezakten per perioderapport opvragen"
 
 #: /src/schooltool/gradebook/browser/request_reports.py:153
 msgid "Choose a report activity"
@@ -793,7 +793,7 @@ msgstr "Perioderapporten"
 
 #: /src/schooltool/gradebook/browser/request_reports.py:97
 msgid "Failures by Term"
-msgstr ""
+msgstr "Gezakten per periode"
 
 #: /src/schooltool/gradebook/browser/summary.pt:10
 msgid "Section Worksheet Summary"
@@ -965,7 +965,7 @@ msgstr "Categorie"
 
 #: /src/schooltool/gradebook/interfaces.py:134
 msgid "The activity category"
-msgstr "De Activiteit categorie"
+msgstr "De activiteit-categorie"
 
 #: /src/schooltool/gradebook/interfaces.py:139
 msgid "Scoresystem"
@@ -1054,7 +1054,7 @@ msgstr "Punten"
 
 #: /src/schooltool/gradebook/interfaces.py:335
 msgid "Points value to calculate the activity grade"
-msgstr ""
+msgstr "Puntenwaarde om het activiteitcijfer te berekenen"
 
 #: /src/schooltool/gradebook/interfaces.py:356
 msgid "Name of the external activities source"
